// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`day view > should match snapshot 1`] = `
<div
  class="inf-date-calendar"
  title="DateCalendar"
>
  <div
    class="inf-calendar-header"
  >
    <button
      class="inf-button inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12H3M3 12L6 9M3 12L6 15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="inf-calendar-header__wrapper"
    >
      <span
        class="inf-calendar-header__control"
      >
        Март
      </span>
      <span
        class="inf-calendar-header__control"
      >
        2025
      </span>
    </div>
    <button
      class="inf-button inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12H21M21 12L18 15M21 12L18 9"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="inf-calendar-days"
  >
    <div
      class="inf-calendar-days__weekdays"
    >
      <span>
        Пн
      </span>
      <span>
        Вт
      </span>
      <span>
        Ср
      </span>
      <span>
        Чт
      </span>
      <span>
        Пт
      </span>
      <span>
        Сб
      </span>
      <span>
        Вс
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item"
      >
        1
      </span>
      <span
        class="inf-calendar-item"
      >
        2
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item"
      >
        3
      </span>
      <span
        class="inf-calendar-item"
      >
        4
      </span>
      <span
        class="inf-calendar-item"
      >
        5
      </span>
      <span
        class="inf-calendar-item"
      >
        6
      </span>
      <span
        class="inf-calendar-item"
      >
        7
      </span>
      <span
        class="inf-calendar-item"
      >
        8
      </span>
      <span
        class="inf-calendar-item"
      >
        9
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item"
      >
        10
      </span>
      <span
        class="inf-calendar-item"
      >
        11
      </span>
      <span
        class="inf-calendar-item"
      >
        12
      </span>
      <span
        class="inf-calendar-item"
      >
        13
      </span>
      <span
        class="inf-calendar-item"
      >
        14
      </span>
      <span
        class="inf-calendar-item"
      >
        15
      </span>
      <span
        class="inf-calendar-item"
      >
        16
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item"
      >
        17
      </span>
      <span
        class="inf-calendar-item"
      >
        18
      </span>
      <span
        class="inf-calendar-item"
      >
        19
      </span>
      <span
        class="inf-calendar-item"
      >
        20
      </span>
      <span
        class="inf-calendar-item"
      >
        21
      </span>
      <span
        class="inf-calendar-item"
      >
        22
      </span>
      <span
        class="inf-calendar-item"
      >
        23
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item inf-calendar-item--selected"
      >
        24
      </span>
      <span
        class="inf-calendar-item"
      >
        25
      </span>
      <span
        class="inf-calendar-item"
      >
        26
      </span>
      <span
        class="inf-calendar-item"
      >
        27
      </span>
      <span
        class="inf-calendar-item"
      >
        28
      </span>
      <span
        class="inf-calendar-item"
      >
        29
      </span>
      <span
        class="inf-calendar-item"
      >
        30
      </span>
    </div>
    <div
      class="inf-calendar-days__week"
    >
      <span
        class="inf-calendar-item"
      >
        31
      </span>
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
      <span
        class="inf-calendar-item inf-calendar-item--empty inf-calendar-item--disabled"
      />
    </div>
  </div>
</div>
`;

exports[`month view > should match snapshot > monthView 1`] = `
<div
  class="inf-date-calendar"
  title="DateCalendar"
>
  <div
    class="inf-calendar-header"
  >
    <button
      class="inf-button inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12H3M3 12L6 9M3 12L6 15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="inf-calendar-header__wrapper"
    >
      <span
        class="inf-calendar-header__control inf-calendar-header__control--selected"
      >
        Март
      </span>
      <span
        class="inf-calendar-header__control"
      >
        2025
      </span>
    </div>
    <button
      class="inf-button inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12H21M21 12L18 15M21 12L18 9"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="inf-calendar-months"
  >
    <span
      class="inf-calendar-item"
    >
      январь
    </span>
    <span
      class="inf-calendar-item"
    >
      февраль
    </span>
    <span
      class="inf-calendar-item inf-calendar-item--selected"
    >
      март
    </span>
    <span
      class="inf-calendar-item"
    >
      апрель
    </span>
    <span
      class="inf-calendar-item"
    >
      май
    </span>
    <span
      class="inf-calendar-item"
    >
      июнь
    </span>
    <span
      class="inf-calendar-item"
    >
      июль
    </span>
    <span
      class="inf-calendar-item"
    >
      август
    </span>
    <span
      class="inf-calendar-item"
    >
      сентябрь
    </span>
    <span
      class="inf-calendar-item"
    >
      октябрь
    </span>
    <span
      class="inf-calendar-item"
    >
      ноябрь
    </span>
    <span
      class="inf-calendar-item"
    >
      декабрь
    </span>
  </div>
</div>
`;

exports[`year view > should match snapshot > yearView 1`] = `
<div
  class="inf-date-calendar"
  title="DateCalendar"
>
  <div
    class="inf-calendar-header"
  >
    <button
      class="inf-button inf-calendar-header__arrow--hidden inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12H3M3 12L6 9M3 12L6 15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="inf-calendar-header__wrapper"
    >
      <span
        class="inf-calendar-header__control"
      >
        Март
      </span>
      <span
        class="inf-calendar-header__control inf-calendar-header__control--selected"
      >
        2025
      </span>
    </div>
    <button
      class="inf-button inf-calendar-header__arrow--hidden inf-button--variant-ghost inf-button--size-small inf-button--square"
      type="button"
    >
      <span
        class="inf-button__content"
      >
        <span
          class="inf-button__icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12H21M21 12L18 15M21 12L18 9"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
  <div
    class="inf-calendar-years"
  >
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1900
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1901
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1902
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1903
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1904
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1905
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1906
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1907
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1908
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1909
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1910
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1911
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1912
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1913
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1914
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1915
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1916
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1917
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1918
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1919
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1920
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1921
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1922
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1923
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1924
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1925
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1926
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1927
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1928
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1929
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1930
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1931
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1932
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1933
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1934
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1935
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1936
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1937
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1938
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1939
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1940
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1941
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1942
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1943
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1944
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1945
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1946
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1947
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1948
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1949
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1950
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1951
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1952
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1953
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1954
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1955
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1956
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1957
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1958
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1959
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1960
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1961
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1962
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1963
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1964
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1965
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1966
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1967
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1968
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1969
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1970
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1971
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1972
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1973
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1974
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1975
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1976
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1977
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1978
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1979
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1980
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1981
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1982
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1983
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1984
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1985
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1986
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1987
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1988
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1989
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1990
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1991
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1992
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1993
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1994
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1995
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1996
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1997
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1998
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      1999
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2000
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2001
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2002
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2003
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2004
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2005
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2006
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2007
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2008
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2009
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2010
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2011
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2012
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2013
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2014
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2015
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2016
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2017
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2018
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2019
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2020
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2021
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2022
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2023
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2024
    </span>
    <span
      class="inf-calendar-item inf-calendar-item--selected"
      data-selected-year="true"
    >
      2025
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2026
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2027
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2028
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2029
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2030
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2031
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2032
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2033
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2034
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2035
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2036
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2037
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2038
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2039
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2040
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2041
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2042
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2043
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2044
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2045
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2046
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2047
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2048
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2049
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2050
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2051
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2052
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2053
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2054
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2055
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2056
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2057
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2058
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2059
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2060
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2061
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2062
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2063
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2064
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2065
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2066
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2067
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2068
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2069
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2070
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2071
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2072
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2073
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2074
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2075
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2076
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2077
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2078
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2079
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2080
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2081
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2082
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2083
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2084
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2085
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2086
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2087
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2088
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2089
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2090
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2091
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2092
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2093
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2094
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2095
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2096
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2097
    </span>
    <span
      class="inf-calendar-item"
      data-selected-year="false"
    >
      2098
    </span>
  </div>
</div>
`;
